--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
   --main-bg-color: #{darken($lightBackground, 5%)};
   --sub-bg-color: #{$lightBackground};
   --elem-bg-color: #{lighten($lightBackground, 5%)};
+  --btn-hover-bg-color: #{lighten($lightBackground, 5%)};
   --btn-press-bg-color: #{lighten($lightBackground, 10%)};
   --disabled-color: #{lighten($lightColor, 25%)};
 }
@@ -15,6 +16,7 @@
     --main-bg-color: #{darken($darkBackground, 5%)};
     --sub-bg-color: #{$darkBackground};
     --elem-bg-color: #{lighten($darkBackground, 5%)};
+    --btn-hover-bg-color: #{lighten($darkBackground, 5%)};
     --btn-press-bg-color: #{lighten($darkBackground, 10%)};
     --disabled-color: #{lighten($darkBackground, 10%)};
   }
@@ -65,6 +67,12 @@ input, button {
   }
 }
 
-button:active {
-  background-color: var(--btn-press-bg-color);
+button {
+  &:hover {
+    background-color: var(--btn-hover-bg-color);
+  }
+
+  &:active {
+    background-color: var(--btn-press-bg-color);
+  }
 }
