--- a/src/renderer/components/titlebar.scss
+++ b/src/renderer/components/titlebar.scss
@@ -1,25 +1,36 @@
 .titlebar {
   display: flex;
-  user-select: none;
-  -webkit-user-select: none;
-  -webkit-app-region: drag;
   background-color: var(--sub-bg-color);
   font-size: 0.8rem;
   font-family: "Montserrat";
   font-weight: 600;
   align-items: center;
 
-  .icon {
-    width: 1rem;
-    height: 1rem;
-    margin: 0 0.5rem;
+  .handle {
+    display: flex;
+    flex: 1 0 0;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
+
+    .icon {
+      width: 1rem;
+      height: 1rem;
+      margin: 0 0.5rem;
+    }
+
+    .label {
+      flex: 1 0 0;
+      padding: 0.5rem;
+      margin: 0;
+      font-size: inherit;
+      font-weight: inherit;
+    }
   }
 
-  .label {
-    flex: 1 0 0;
-    padding: 0.5rem;
-    margin: 0;
-    font-size: inherit;
-    font-weight: inherit;
+  button {
+    border: none;
+    padding: 0.5rem 1rem;
+    box-shadow: 1px 0 1px -1px inset #000;
   }
 }
