--- a/src/renderer/screens/main/main.scss
+++ b/src/renderer/screens/main/main.scss
@@ -2,15 +2,32 @@
   .sections {
     font-size: #{(100 / 1280 * 14)}vw;
 
-    .panels {
+    .content {
       display: flex;
       flex: 1 0 0;
+      padding: 1.5em;
+
+      .panels {
+        display: flex;
+        flex: 1 0 0;
+        flex-wrap: wrap;
+
+        .panel {
+          width: 100%;
+          height: 100%;
+          border-width: 0.1em;
+
+          .label {
+            font-size: 0.6em;
+          }
+        }
+      }
     }
 
     .preview {
       height: 30%;
       background-color: var(--sub-bg-color);
-      padding: 1rem;
+      padding: 1em;
     }
   }
 }
