--- a/src/renderer/screens/picker/picker.scss
+++ b/src/renderer/screens/picker/picker.scss
@@ -6,11 +6,11 @@
     padding: 0 1rem;
 
     .pack {
-      border: 1px solid var(--main-color);
+      border: 1px solid var(--border-color);
       padding: 1rem 0.75rem;
       margin: 1rem 0;
 
-      .label {
+      > .label {
         font-family: "Montserrat";
         font-weight: 700;
         font-size: 0.8rem;
@@ -31,28 +31,31 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: start;
+        gap: 1rem;
         clear: both;
       }
     }
   }
 
-  .panel {
-    width: 5.5rem;
-    height: 4rem;
-    background-color: var(--elem-bg-color);
-    border: 1px solid var(--main-color);
-
-    .image {
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center center;
-    }
-  }
-
   .costumes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    clear: both;
     background-color: var(--sub-bg-color);
-    height: 10rem;
+    height: 12rem;
     padding: 1rem;
+    overflow: auto;
+
+    .header {
+      width: 100%;
+      font-weight: 700;
+      font-family: "Montserrat";
+      margin: 1rem 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
   }
 }
