Saving and loading implemented

--- a/src/renderer/components/titlebar.scss
+++ b/src/renderer/components/titlebar.scss
@@ -28,6 +28,11 @@
     }
   }
 
+  .divider {
+    display: block;
+    width: 0.25rem;
+  }
+
   button {
     border: none;
     padding: 0.5rem 1rem;
