--- a/src/renderer/screens/main/main.scss
+++ b/src/renderer/screens/main/main.scss
@@ -19,13 +19,14 @@
 
           .label {
             font-size: 0.6em;
+            padding: 0.25em;
           }
         }
       }
     }
 
     .preview {
-      height: 30%;
+      height: 15em;
       background-color: var(--sub-bg-color);
       padding: 1em;
     }
