--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -25,10 +25,15 @@
     text-align: center;
     font-family: "Montserrat";
     font-weight: 700;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     overflow: hidden;
     max-height: 100%;
+
+    .label-image {
+      height: 0.7em;
+      max-width: 100%;
+    }
   }
 }
