--- a/src/renderer/screens/picker/picker.scss
+++ b/src/renderer/screens/picker/picker.scss
@@ -43,8 +43,9 @@
     justify-content: start;
     clear: both;
     background-color: var(--sub-bg-color);
-    height: 12rem;
+    height: 15rem;
     padding: 1rem;
+    gap: 1rem;
     overflow: auto;
 
     .header {
@@ -56,6 +57,10 @@
       &:first-child {
         margin-top: 0;
       }
+    }
+
+    .panel {
+      width: 4.5rem;
     }
   }
 }
