--- a/src/renderer/screens/main/main.scss
+++ b/src/renderer/screens/main/main.scss
@@ -26,9 +26,26 @@
     }
 
     .preview {
+      display: flex;
+      flex-wrap: nowrap;
       height: 15em;
       background-color: var(--sub-bg-color);
       padding: 1em;
+
+      .image-container {
+        width: 10em;
+        height: 100%;
+        border: 0.1em solid var(--border-color);
+        overflow: hidden;
+
+        .image {
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-position: center center;
+          background-repeat: no-repeat;
+        }
+      }
     }
   }
 }
