--- a/src/renderer/components/panels/panelscreen.scss
+++ b/src/renderer/components/panels/panelscreen.scss
@@ -1,49 +1,51 @@
-#app.main {
-  .sections {
-    font-size: #{(100 / 1280 * 14)}vw;
+@mixin panelscreen($screen) {
+  #app.#{$screen} {
+    .sections {
+      font-size: #{(100 / 1280 * 14)}vw;
 
-    .content {
-      display: flex;
-      flex: 1 0 0;
-      padding: 1.5em;
-
-      .panels {
+      .content {
         display: flex;
         flex: 1 0 0;
-        flex-wrap: wrap;
+        padding: 1.5em;
 
-        .panel {
-          width: 100%;
-          height: 100%;
-          border-width: 0.1em;
+        .panels {
+          display: flex;
+          flex: 1 0 0;
+          flex-wrap: wrap;
 
-          .label {
-            font-size: 0.6em;
-            padding: 0.25em;
+          .panel {
+            width: 100%;
+            height: 100%;
+            border-width: 0.1em;
+
+            .label {
+              font-size: 0.6em;
+              padding: 0.25em;
+            }
           }
         }
       }
-    }
 
-    .preview {
-      display: flex;
-      flex-wrap: nowrap;
-      height: 15em;
-      background-color: var(--sub-bg-color);
-      padding: 1em;
+      .preview {
+        display: flex;
+        flex-wrap: nowrap;
+        height: 15em;
+        background-color: var(--sub-bg-color);
+        padding: 1em;
 
-      .image-container {
-        width: 10em;
-        height: 100%;
-        border: 0.1em solid var(--border-color);
-        overflow: hidden;
-
-        .image {
-          width: 100%;
+        .image-container {
+          width: 10em;
           height: 100%;
-          background-size: cover;
-          background-position: center center;
-          background-repeat: no-repeat;
+          border: 0.1em solid var(--border-color);
+          overflow: hidden;
+
+          .image {
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center center;
+            background-repeat: no-repeat;
+          }
         }
       }
     }
