--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -11,8 +11,11 @@
   }
 
   .image {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
