--- a/src/renderer/components/panels/panelscreen.scss
+++ b/src/renderer/components/panels/panelscreen.scss
@@ -33,14 +33,18 @@
         padding: 1em;
 
         .image-container {
+          position: relative;
           width: 10em;
           height: 13em;
           border: 0.1em solid var(--border-color);
           overflow: hidden;
 
           .image {
-            width: 100%;
-            height: 100%;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
