--- a/src/renderer/screens/error/error.scss
+++ b/src/renderer/screens/error/error.scss
@@ -2,11 +2,16 @@ $errorColor: #fff;
 $errorBgColor: #701;
 $errorSubBgColor: lighten($errorBgColor, 10%);
 $errorElemBgColor: lighten($errorSubBgColor, 5%);
+$errorFooterBgColor: lighten($errorBgColor, 2.5%);
+
+body.error {
+  overflow: overlay;
+}
 
 #app.error {
   color: $errorColor;
   background-color: $errorBgColor;
-  overflow: hidden;
+  overflow: overlay;
   width: 100%;
   height: 100%;
 
@@ -42,5 +47,11 @@ $errorElemBgColor: lighten($errorSubBgColor, 5%);
   .error-message {
     text-align: center;
     padding: 1rem;
+  }
+
+  .footer {
+    padding: 1rem;
+    text-align: center;
+    background-color: $errorFooterBgColor;
   }
 }
