--- a/src/renderer/screens/picker/picker.scss
+++ b/src/renderer/screens/picker/picker.scss
@@ -40,6 +40,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
+    align-content: flex-start;
     clear: both;
     background-color: var(--sub-bg-color);
     height: 15rem;
