--- a/src/renderer/screens/picker/picker.scss
+++ b/src/renderer/screens/picker/picker.scss
@@ -36,7 +36,7 @@
     }
   }
 
-  .costumes {
+  .alts {
     clear: both;
     background-color: var(--sub-bg-color);
     height: 15rem;
@@ -54,7 +54,7 @@
       }
     }
 
-    .costume-group {
+    .alt-group {
       display: flex;
       flex-wrap: wrap;
       justify-content: start;
