--- a/src/renderer/screens/render/render.scss
+++ b/src/renderer/screens/render/render.scss
@@ -1,3 +1,84 @@
 @import "../../components/panels/panelscreen.scss";
 
 @include panelscreen(render);
+
+#app.render {
+  .credits-placeholder {
+    width: 100%;
+    font-size: 0.7em;
+    padding: 0.1em;
+    columns: 3;
+
+    &.unbound {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+    }
+
+    .credits-group {
+      break-inside: avoid-column;
+      overflow: hidden;
+      padding: 0.5em;
+      margin-bottom: 1em;
+
+      h2 {
+        display: block;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: right center;
+        padding-bottom: 1em;
+        margin-bottom: -0.5;
+      }
+    }
+
+    .credits-content-container {
+      flex: 1 0 0;
+      position: relative;
+    }
+
+    .credits-content {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      max-height: 100%;
+      overflow: overlay;
+    }
+
+    .credits-block {
+      margin: 1em 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    .credits-label {
+      font-family: 'Montserrat';
+      font-weight: 700;
+    }
+    .credits-link {
+      display: block;
+      padding: 0 0.5em;
+
+      img {
+        height: 2em;
+        vertical-align: middle;
+        margin-right: 1em;
+      }
+
+      svg.icon {
+        width: 2em;
+        height: 2em;
+        margin-right: 1em;
+        vertical-align: middle;
+      }
+    }
+  }
+}
