Theme can now be switched in properties

--- a/src/index.scss
+++ b/src/index.scss
@@ -80,7 +80,7 @@ body {
   height: 100vh;
 }
 
-input, button {
+input, button, select {
   background-color: var(--elem-bg-color);
   color: var(--main-color);
   border: 1px solid var(--main-color);
