Switching rosters implemented

--- a/src/renderer/screens/properties/entity/picker.scss
+++ b/src/renderer/screens/properties/entity/picker.scss
@@ -4,6 +4,8 @@
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
+  max-height: 13rem;
+  overflow: overlay;
 
   .picker-panel {
     width: 5rem;
