--- a/src/renderer/components/panels/panelscreen.scss
+++ b/src/renderer/components/panels/panelscreen.scss
@@ -34,6 +34,7 @@
         background-color: var(--sub-bg-color);
         padding: 1em;
         gap: 2em;
+        position: relative;
 
         .image-container {
           position: relative;
