--- a/src/index.scss
+++ b/src/index.scss
@@ -1,30 +1,31 @@
-@import "./sass/variables";
+@use './sass/color';
+@use "./sass/variables";
 
 :root {
-  --main-color: #{$lightColor};
-  --main-bg-color: #{$lightBackground};
-  --sub-bg-color: #{darken($lightBackground, 5%)};
-  --elem-bg-color: #{lighten($lightBackground, 2.5%)};
-  --btn-hover-bg-color: #{lighten($lightBackground, 5%)};
-  --btn-press-bg-color: #{lighten($lightBackground, 10%)};
-  --disabled-color: #{lighten($lightColor, 25%)};
-  --scrollbar-bg-color: #{rgba(darken($lightBackground, 25%), 0.5)};
-  --border-color: #{darken($lightBackground, 25%)};
-  --border-active-color: #{$lightColor};
+  --main-color: #{variables.$lightColor};
+  --main-bg-color: #{variables.$lightBackground};
+  --sub-bg-color: #{color.darken(variables.$lightBackground, 5%)};
+  --elem-bg-color: #{color.lighten(variables.$lightBackground, 2.5%)};
+  --btn-hover-bg-color: #{color.lighten(variables.$lightBackground, 5%)};
+  --btn-press-bg-color: #{color.lighten(variables.$lightBackground, 10%)};
+  --disabled-color: #{color.lighten(variables.$lightColor, 25%)};
+  --scrollbar-bg-color: #{rgba(color.darken(variables.$lightBackground, 25%), 0.5)};
+  --border-color: #{color.darken(variables.$lightBackground, 25%)};
+  --border-active-color: #{variables.$lightColor};
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --main-color: #{$darkColor};
-    --main-bg-color: #{darken($darkBackground, 5%)};
-    --sub-bg-color: #{$darkBackground};
-    --elem-bg-color: #{lighten($darkBackground, 5%)};
-    --btn-hover-bg-color: #{lighten($darkBackground, 5%)};
-    --btn-press-bg-color: #{lighten($darkBackground, 10%)};
-    --disabled-color: #{lighten($darkBackground, 10%)};
-    --scrollbar-bg-color: #{rgba(darken($darkColor, 2.5%), 0.5)};
-    --border-color: #{lighten($darkBackground, 12.5%)};
-    --border-active-color: #{$darkColor};
+    --main-color: #{variables.$darkColor};
+    --main-bg-color: #{color.darken(variables.$darkBackground, 5%)};
+    --sub-bg-color: #{variables.$darkBackground};
+    --elem-bg-color: #{color.lighten(variables.$darkBackground, 5%)};
+    --btn-hover-bg-color: #{color.lighten(variables.$darkBackground, 5%)};
+    --btn-press-bg-color: #{color.lighten(variables.$darkBackground, 10%)};
+    --disabled-color: #{color.lighten(variables.$darkBackground, 10%)};
+    --scrollbar-bg-color: #{rgba(color.darken(variables.$darkColor, 2.5%), 0.5)};
+    --border-color: #{color.lighten(variables.$darkBackground, 12.5%)};
+    --border-active-color: #{variables.$darkColor};
   }
 }
 
@@ -128,4 +129,49 @@ small, .small {
   font-weight: 350;
 }
 
-@import "./sass/panels";
+.panel {
+  position: relative;
+  width: 5.5rem;
+  height: 4rem;
+  background-color: var(--elem-bg-color);
+  border: 1px solid var(--border-color);
+
+  &.active {
+    border-color: var(--border-active-color);
+  }
+
+  .image {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+    &.image-characters, &.image-stages {
+      clip-path: inset(0 0 0 0);
+    }
+  }
+
+  .label {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 0.8rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    overflow: hidden;
+    max-height: 100%;
+
+    .label-image {
+      height: 0.7em;
+      max-width: 100%;
+    }
+  }
+}
